...
    <string name="settings_diagnostics_count">Записей: %1$d</string>
    <string name="diagnostics_title">Журнал ошибок</string>
    <string name="diagnostics_description">Хранится только на устройстве.</string>
    <string name="diagnostics_copy">Копировать</string>
    <string name="diagnostics_copied">Журнал скопирован</string>
    <string name="diagnostics_clear">Очистить</string>
    <string name="links_url_clear">Очистить ссылку</string>
    <string name="diagnostics_clear_confirm_title">Очистить журнал?</string>
    <string name="diagnostics_clear_confirm_message">Записи удалятся с устройства, восстановить их не получится.</string>
    <string name="diagnostics_empty_title">Ошибок нет</string>
    <string name="diagnostics_level_warning">Предупреждение</string>
    <string name="diagnostics_level_error">Ошибка</string>
    <string name="diagnostics_level_crash">Падение</string>
...
    <string name="onboarding_notifications_allow">Разрешить</string>
    <string name="onboarding_notifications_open_settings">Открыть настройки</string>
    <string name="onboarding_notifications_configure">Настроить в Android</string>
    <string name="settings_restart_onboarding_title">Повторить первоначальную настройку</string>
    <string name="settings_restart_onboarding_description">Виджеты, подключение и уведомления</string>
    <string name="common_error_restricted">Действие ограничено модерацией</string>
    <string name="links_category_scores">Таблица баллов</string>
    <string name="links_category_queue">Очередь на сдачу</string>
    <string name="links_category_materials">Материалы курса</string>
    <string name="links_category_tasks">Задания</string>
    <string name="links_category_recordings">Записи лекций</string>
    <string name="links_category_notes">Конспекты</string>
    <string name="links_category_exam">К экзамену</string>
    <string name="links_category_chat">Чат</string>
    <string name="links_category_other">Другое</string>
    <string name="links_visibility_private">Только я</string>
    <string name="links_visibility_flow_unnamed">Поток из расписания</string>
    <string name="links_visibility_all">Все</string>
    <string name="links_visibility_all_review">После проверки</string>
    <string name="links_status_pending">на проверке</string>
    <string name="links_status_rejected">отклонена</string>
    <string name="links_status_hidden">скрыта</string>
    <string name="links_invalid_url">Нужна ссылка https://</string>
    <string name="links_title_too_long">Не больше 120 символов</string>
    <string name="links_title">Ссылки</string>
    <string name="links_add">Добавить ссылку</string>
    <string name="links_all_count">Все ссылки, %1$d</string>
    <string name="links_mine">моя</string>
    <string name="links_chats">Чаты</string>
    <string name="links_previous">С прошлых лет</string>
    <string name="links_empty">Ссылок пока нет</string>
    <string name="links_error_title">Не удалось загрузить ссылки</string>
    <string name="links_editor_new">Новая ссылка</string>
    <string name="links_editor_edit">Изменить ссылку</string>
    <string name="links_url_hint">Ссылка</string>
    <string name="links_name_hint">Название</string>
    <string name="links_who_sees">Кто видит</string>
    <string name="links_save">Сохранить</string>
    <string name="links_connection_required">Поделиться можно с подключением к ITMO.Widgets</string>
    <string name="links_open">Открыть</string>
    <string name="links_author">Автор: %1$s</string>
    <string name="links_copy">Скопировать ссылку</string>
    <string name="links_copied">Ссылка скопирована</string>
    <string name="links_pin">Закрепить</string>
    <string name="links_unpin">Открепить</string>
...
